--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                         <a href="https://github.com/naranyinyun" target="_blank" class="btn btn-primary col-lg-4">GitHub</a>
                         <a href="https://space.bilibili.com/384920476" target="_blank" class="btn btn-primary col-lg-4">BiliBili</a>
                     </div>
+                    本站已安全运行了<b><strong><script language = "JavaScript"type = "text/javascript" >var urodz = new Date("07/07/2022");var now = new Date();var ile = now.getTime() - urodz.getTime();var dni = Math.floor(ile / (1000 * 60 * 60 * 24));document.write( + dni)</script></strong></b>天
                 </div>
                 <!-- <audio muted></audio> -->
                 <div id="aplayer-inner" class="aplayer"></div>
@@ -115,5 +116,6 @@
             });
         });
     </script>
+    
 
 </html>
