--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
         .photo-bg {
             /* 卡片左侧图片 */
-            background-image: url("https://blog.nalanyinyun.ml/hotlink-ok/side.png");
+            background-image: url("https://blog.nalanyinyun.ml/hotlink-ok/F-Ck.png");
         }
     </style>
     <script>
