--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <p id="hitokoto_text">:D 一言获取中...</p>
                 <div class="container-fluid">
                     <div class="row">
-                        <a href="https://blog.nalanyinyun.ml" target="_blank" class="btn btn-primary col-lg-4">BLOG</a>
+                        <a href="https://blog.nalanyinyun.top" target="_blank" class="btn btn-primary col-lg-4">BLOG</a>
                         <a href="https://github.com/naranyinyun" target="_blank" class="btn btn-primary col-lg-4">GitHub</a>
                         <a href="https://space.bilibili.com/384920476" target="_blank" class="btn btn-primary col-lg-4">BiliBili</a>
                     </div>
